--- a/react-app/package.json
+++ b/react-app/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "sass": "^1.32.11",
+    "unitconversion": "^2.1.13",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
