--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.6",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-async": "^10.0.1",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.3",
