riformattati tutti i file

--- a/src/.prettierrc
+++ b/src/.prettierrc
@@ -1,13 +1,14 @@
 {
-    "singleQuote": true,
-    "printWidth": 200,
-    "editor.formatOnSave": true,
-    "proseWrap": "always",
-    "tabWidth": 4,
-    "requireConfig": false,
-    "useTabs": true,
-    "trailingComma": "none",
-    "bracketSpacing": false,
-    "jsxBracketSameLine": false,
-    "semi": true
+	"singleQuote": true,
+	"printWidth": 200,
+	"editor.formatOnSave": true,
+	"proseWrap": "always",
+	"tabWidth": 4,
+	"requireConfig": false,
+	"useTabs": true,
+	"trailingComma": "none",
+	"bracketSpacing": true,
+	"jsxBracketSameLine": false,
+	"jsxSingleQuote": true,
+	"semi": true
 }
