--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "rsuite": "^4.9.4",
     "sass": "^1.32.11",
     "unitconversion": "^2.1.13",
     "web-vitals": "^1.1.1"
