--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.26.2",
+    "bootstrap": "^5.0.1",
     "firebase": "^8.6.1",
     "formik": "^2.2.6",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-async": "^10.0.1",
     "react-css-modules": "^4.7.11",
     "react-dom": "^17.0.2",
