--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.12.0",
@@ -12,12 +13,15 @@
     "@themesberg/react-bootstrap": "^1.4.1",
     "apexcharts": "^3.26.2",
     "bootstrap": "^5.0.1",
+    "chartist-plugin-tooltips-updated": "^0.1.4",
     "firebase": "^8.6.1",
     "formik": "^2.2.6",
+    "moment-timezone": "^0.5.33",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-async": "^10.0.1",
+    "react-chartist": "^0.14.4",
     "react-css-modules": "^4.7.11",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
