--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-chartist": "^0.14.4",
     "react-css-modules": "^4.7.11",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2",
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
