--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-async": "^10.0.1",
     "react-chartist": "^0.14.4",
     "react-css-modules": "^4.7.11",
+    "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
     "react-html-parser": "^2.0.2",
