--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3000",
+  "proxy": "http://localhost",
   "eslintConfig": {
     "extends": [
       "react-app",
