--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-async": "^10.0.1",
+    "react-bootstrap": "^1.6.0",
     "react-chartist": "^0.14.4",
     "react-css-modules": "^4.7.11",
     "react-datetime": "^3.0.4",
