--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost/API",
+  "proxy": "http://ecommerce.ideeinbit.it",
   "eslintConfig": {
     "extends": [
       "react-app",
