--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dropzone": "^11.3.2",
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.4",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
